--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,13 +28,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CleanTemplate"
-        android:name=".CleanTemplate"
+        android:theme="@style/Theme.CheckoutMobileChallenge"
+        android:name=".CheckoutMobileChallenge"
         tools:targetApi="31">
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.CleanTemplate">
+            android:theme="@style/Theme.CheckoutMobileChallenge">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
